<resources>
    <string name="app_name">Cluego</string>
    <string name="title_home">Game</string>
    <string name="title_dashboard">Suspects</string>
    <string name="title_notifications">Stats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="start">A crime has been commited the king has been killed by Jopperman presumably</string>
    <string name="game">HERE COMES GAME</string>
    <string name="stats">HERE COMES STATS</string>
    <string name="newGame">Start a new Game</string>
    <string name="instruction">Click the game icon to proceed</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_enter_password">Re-enter password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_facebook">Facebook sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This e-mail address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="toast_message">Toast Successful!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="continueGame">You have an unfinished game, do you wish to continue this game?</string>
    <string name="label_register_here">No account yet? Register here!</string>
    <string name="continue_naar_map">Naar map gaan (testing)</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">1895042873936175</string>
    <string name="fb_login_protocol_scheme">fb1895042873936175</string>
    <string name="joinPlayerName">What is the username of the player you want to join?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="myInventory"><u>My inventory</u></string>

    <string name="baseUrl">https://clugo.azurewebsites.net/api/</string>
    <string name="TAG">TAG</string>
</resources>
