<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#fff">

        <!--  Header  Starts-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="1dp"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">
            <!-- Logo Start-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="10dip"
                android:src="@drawable/beginicon" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->


        <!-- Registration Form -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            android:padding="10dip">
            <!-- Full Name Label -->
            <EditText
                android:id="@+id/reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/prompt_username"
                android:singleLine="true"
                android:text="test" />
            <!--  Email Label -->
            <EditText
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/prompt_email"
                android:singleLine="true"
                android:text="test" />
            <!-- Password Label -->

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="123456" />

            <EditText
                android:id="@+id/dup_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/prompt_re_enter_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="123456" />
            <!-- Register Button -->
            <!-- Register Button -->
            <!-- Link to Login Screen -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:onClick="RegisterNewUser"
                android:text="Register New Account" />

            <TextView
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="40dip"
                android:gravity="center"
                android:text="Already has account! Login here"
                android:textColor="#025f7c"
                android:textSize="20dip" />

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>