<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/background"
    >

    <!-- Login progress -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="284dp"
        android:layout_height="90dp"
        android:baselineAligned="false"
        app:srcCompat="@drawable/beginicon"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="358dp"
        android:paddingTop="230px">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="Username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5px"
                    android:singleLine="true"
                    android:text="test" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30px"
                    android:background="@android:color/white"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="5px"
                    android:singleLine="true"
                    android:text="123456"
                    tools:targetApi="o" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="234dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_button"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="234dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/round_button"
                android:onClick="signInFacebook"
                android:text="@string/continue_naar_map"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="30px"
                android:layout_marginBottom="30px"/>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:background="@drawable/round_button" />

            <TextView
                android:id="@+id/label_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:onClick="openRegisterForm"
                android:text="@string/label_register_here"
                android:textAllCaps="false"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_go_to_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="main activity dev " />

            <TextView
                android:id="@+id/logging"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textColor="#098e38"
                android:textSize="16dip" />

            <ProgressBar
                android:id="@+id/progressBarLogin"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
